syntax = "proto3";

package auth;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/imhasandl/grpc-go/internal/protos";

service AuthService {
  rpc Register (RegisterRequest) returns (RegisterResponse) {}
  rpc Login (LoginRequest) returns (LoginResponse) {}
}

message RegisterRequest {
  string email = 1;
  string password = 2;
  string username = 3;
}

message RegisterResponse {
  User user = 1;
}

message LoginRequest {
  string identifier = 1;
  string password = 2;
}

message LoginResponse {
  User user = 1;
  string token = 2;
}

message User {
  string id = 1;
  google.protobuf.Timestamp created_at = 2;
  google.protobuf.Timestamp updated_at = 3;
  string email = 4;
  string username = 5;
  bool is_premium = 6;
}